--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.1.2
+  flutter_statusbarcolor_ns: ^0.5.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
