updated font family

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.1.2
   flutter_statusbarcolor_ns: ^0.5.0
   cached_network_image: ^3.2.3
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
